--- a/assets/index.html
+++ b/assets/index.html
@@ -11,6 +11,10 @@
     <h1>Pokemon API</h1>
     <h5>An API which provides the user with starter pokemon information.</h5>
     <a href="/pokemon"><button>Starter Pokemons</button></a>
+    <!-- 'Made with Appwrite' badge -->
+    <a href="https://appwrite.io/" target="_blank" style="position: fixed;right: 18px;bottom: 18px;z-index: 999;">
+      <img style="width: 130px;" src="https://appwrite.io/images-ee/press/badge-pink-box.svg" alt="Built with Appwrite">
+    </a>
   </div>
 </div>
   </body>
